kubernetes/groups-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fifa-group
  name: fifa-group
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fifa-group
 
  template:
    metadata:
      labels:
        app: fifa-group
    spec:
      containers:
      - image: narendra1018/fifa-groups:v1
        name: fifa-groups
        ports:
        - containerPort: 8501
      
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
