kubernetes/main-page.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fifa-main-page
  
  labels:
    app: fifa-main-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fifa-main-page
  template:
    metadata:
      labels:
        app: fifa-main-page
    spec:
      containers:
        - name: fifa-main-page
          image: narendra1018/page:main.html
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
