kubernetes/results-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fifa-tournament-results
  name: fifa-tournament-results
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fifa-tournament-results

  template:
    metadata:
      labels:
        app: fifa-tournament-results
    spec:
      containers:
      - image: narendra1018/results:latest
        name: fifa-tournament-results
        ports:
        - containerPort: 8501

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
