kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: fifa-h2h-svc
spec:
  selector:
    app: fifa-h2h
  ports:
    - port: 80
      targetPort: 8501
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: fifa-groups-svc
spec:
  selector:
    app: fifa-groups
  ports:
    - port: 80
      targetPort: 8501
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: fifa-tournament-svc
spec:
  selector:
    app: fifa-tournament
  ports:
    - port: 80
      targetPort: 8501
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: fifa-tournament-results-svc
spec:
  selector:
    app: fifa-tournament-results
  ports:
    - port: 80
      targetPort: 8501
  type: ClusterIP
