kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fifa-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
  - host: fifa.local
    http:
      paths:
      - path: /h2h
        pathType: Prefix
        backend:
          service:
            name: fifa-h2h-svc
            port:
              number: 80
      - path: /group-stage
        pathType: Prefix
        backend:
          service:
            name: fifa-groups-svc
            port:
              number: 80
      - path: /tournament
        pathType: Prefix
        backend:
          service:
            name: fifa-tournament-svc
            port:
              number: 80
      - path: /results
        pathType: Prefix
        backend:
          service:
            name: fifa-tournament-results-svc
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fifa-main-page-svc
            port:
              number: 80
