kubernetes/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fifa-app-basic-netpol
  namespace: default

spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - fifa-h2h
          - fifa-group
          - fifa-tournament
          - fifa-tournament-results
          - fifa-main-page

  policyTypes:
    - Ingress

  ingress:
    - from:
        - ipBlock:
            cidr:  10.0.0.0/16
    - ports:

        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 8501
